--- a/02-experiment-tracking/duration-prediction.ipynb
+++ b/02-experiment-tracking/duration-prediction.ipynb
@@ -115,18 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "8029eba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# cwd = os.getcwd()\n",
-    "data_path = 'C:/Users/TNEL/data/green_tripdata_2021-01.parquet'\n",
-    "df = pd.read_parquet(data_path)\n",
+    "import os\n",
+    "current_dir = os.getcwd()\n",
+    "current_dir.replace('\\\\', '/')\n",
+    "df_fname = current_dir + './data/green_tripdata_2021-01.parquet'\n",
+    "df = pd.read_parquet(df_fname)\n",
     "\n",
-    "df_train = pd.read_parquet('C:/Users/TNEL/data/green_tripdata_2021-01.parquet')\n",
-    "df_val = pd.read_parquet('C:/Users/TNEL/data/green_tripdata_2021-02.parquet')"
+    "df_train = pd.read_parquet(df_fname)\n",
+    "df_val_fname = current_dir + './data/green_tripdata_2021-02.parquet'\n",
+    "df_val = pd.read_parquet(df_val_fname)"
    ]
   },
   {
